--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,33 +8,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: archlinux:base-devel
+    container: debian:trixie  # Changed to Debian 13
     steps:
       - name: Prepare
         run: |
-          pacman-key --init
-          pacman -Syu --noconfirm
-          pacman -S --noconfirm git meson clang glslang libcap wlroots0.18 \
-            sdl2 vulkan-headers libx11 libxmu libxcomposite libxrender libxres \
-            libxtst libxkbcommon libdrm libinput wayland-protocols benchmark \
-            xorg-xwayland pipewire cmake \
-            libavif libheif aom rav1e libdecor libxdamage \
-            luajit
+          apt-get update
+          apt-get install -y git meson ninja-build gcc g++ pkg-config \
+            libwayland-dev wayland-protocols libxkbcommon-dev libcap-dev \
+            libdrm-dev libvulkan-dev glslang-tools libpipewire-0.3-dev \
+            libdisplay-info-dev libavif-dev libdecor-0-dev libinput-dev \
+            libxdamage-dev libxcomposite-dev libxrender-dev libxres-dev \
+            libxtst-dev libxmu-dev hwdata libseat-dev libliftoff-dev \
+            libei-dev libdecor-0-plugin-1-cairo cmake libx11-dev \
+            libsdl2-dev libxcb1-dev libxcb-composite0-dev libxcb-res0-dev \
+            libxcb-ewmh-dev libxcb-icccm4-dev
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Build with gcc
+      - name: Build
         run: |
-          export CC=gcc CXX=g++
-          meson build-gcc/ -Dinput_emulation=disabled --werror --auto-features=enabled
-          ninja -C build-gcc/
-      - name: Build with gcc (no vr)
-        run: |
-          export CC=gcc CXX=g++
-          meson build-gcc-novr/ -Dinput_emulation=disabled -Denable_openvr_support=false --werror --auto-features=enabled
-          ninja -C build-gcc-novr/
-#      - name: Build with clang
-#        run: |
-#          export CC=clang CXX=clang++
-#          meson build-clang/ -Dinput_emulation=disabled --werror --auto-features=enabled
-#          ninja -C build-clang/
+          meson setup build/ --prefix=/usr --buildtype=release
+          ninja -C build/
+      
+      - name: Upload gamescope binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: gamescope-debian13-amd64
+          path: build/gamescope
+          retention-days: 90
