--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
             libxtst-dev libxmu-dev hwdata libseat-dev libliftoff-dev \
             libei-dev libdecor-0-plugin-1-cairo cmake libx11-dev \
             libsdl2-dev libxcb1-dev libxcb-composite0-dev libxcb-res0-dev \
-            libxcb-ewmh-dev libxcb-icccm4-dev luajit libluajit-5.1-dev
+            libxcb-ewmh-dev libxcb-icccm4-dev luajit libluajit-5.1-dev \
+            libx11-xcb-dev
       - uses: actions/checkout@v4
         with:
           submodules: recursive
