--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,18 @@ jobs:
       - name: Prepare
         run: |
           apt-get update
-          apt-get install -y git meson ninja-build gcc g++ pkg-config \
+          apt-get install -y git meson ninja-build gcc g++ pkg-config cmake \
             libwayland-dev wayland-protocols libxkbcommon-dev libcap-dev \
             libdrm-dev libvulkan-dev glslang-tools libpipewire-0.3-dev \
             libdisplay-info-dev libavif-dev libdecor-0-dev libinput-dev \
             libxdamage-dev libxcomposite-dev libxrender-dev libxres-dev \
             libxtst-dev libxmu-dev hwdata libseat-dev libliftoff-dev \
-            libei-dev libdecor-0-plugin-1-cairo cmake libx11-dev \
-            libsdl2-dev libxcb1-dev libxcb-composite0-dev libxcb-res0-dev \
+            libei-dev libdecor-0-plugin-1-cairo libx11-dev libsdl2-dev \
+            libxcb1-dev libxcb-composite0-dev libxcb-res0-dev \
             libxcb-ewmh-dev libxcb-icccm4-dev luajit libluajit-5.1-dev \
-            libx11-xcb-dev
+            libx11-xcb-dev libpixman-1-dev libxcb-dri3-dev \
+            libxcb-present-dev libxcb-shm0 libxcb-xfixes0-dev \
+            libxshmfence-dev
       - uses: actions/checkout@v4
         with:
           submodules: recursive
