specify exact binary path for upload

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,13 +38,13 @@ jobs:
           meson setup build/ --prefix=/usr --buildtype=release -Denable_openvr_support=false
           ninja -C build/
       
-      - name: Find gamescope binary
-        run: |
-          find build/ -name gamescope -type f
+      # - name: Find gamescope binary
+      #   run: |
+      #     find build/ -name gamescope -type f
       
       - name: Upload gamescope binary
         uses: actions/upload-artifact@v4
         with:
           name: gamescope-debian13-amd64
-          path: build/**/gamescope
+          path: build/src/gamescope
           retention-days: 90
