--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,51 +48,7 @@ jobs:
           path: build/src/gamescope
           retention-days: 90
 
-  build-static:
-    name: Static Build
-    runs-on: ubuntu-latest
-    container: debian:trixie
-    steps:
-      - name: Prepare
-        run: |
-          apt-get update
-          apt-get install -y \
-            git meson ninja-build gcc g++ pkg-config cmake \
-            libwayland-dev wayland-protocols libxkbcommon-dev \
-            libcap-dev libdrm-dev libvulkan-dev glslang-tools \
-            libpipewire-0.3-dev libdisplay-info-dev libavif-dev \
-            libdecor-0-dev libinput-dev libxdamage-dev \
-            libxcomposite-dev libxrender-dev libxres-dev \
-            libxtst-dev libxmu-dev hwdata libseat-dev \
-            libliftoff-dev libei-dev libdecor-0-plugin-1-cairo \
-            libx11-dev libsdl2-dev libxcb1-dev libxcb-composite0-dev \
-            libxcb-res0-dev libxcb-ewmh-dev libxcb-icccm4-dev \
-            luajit libluajit-5.1-dev libx11-xcb-dev libpixman-1-dev \
-            libxcb-dri3-dev libxcb-present-dev libxcb-shm0-dev \
-            libxcb-xfixes0-dev libxshmfence-dev libxcb-sync-dev \
-            libxcb-randr0-dev libxcb-image0-dev \
-            liblcms2-dev xwayland
-      
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      
-      - name: Build with static linking
-        run: |
-          meson setup build/ --prefix=/usr --buildtype=release \
-            -Denable_openvr_support=false \
-            -Ddefault_library=static \
-            --prefer-static
-          ninja -C build/
-      
-      - name: Upload static binary
-        uses: actions/upload-artifact@v4
-        with:
-          name: gamescope-static-binary
-          path: build/src/gamescope
-          retention-days: 90
-
-  build-deb:
+   build-deb:
     name: DEB Package Build
     runs-on: ubuntu-latest
     container: debian:trixie
@@ -188,14 +144,32 @@ jobs:
       
       - name: Create DEB package with vendored libraries
         run: |
+          # Install to a temporary directory first
+          DESTDIR=$PWD/install-tmp ninja -C build/ install
+          
           mkdir -p package/DEBIAN package/usr/bin package/usr/lib/gamescope
-          cp build/src/gamescope package/usr/bin/
+          
+          # Copy all installed binaries
+          cp install-tmp/usr/bin/gamescope package/usr/bin/
           chmod +x package/usr/bin/gamescope
           
-          # Find and copy all non-system shared libraries
-          # We'll vendor the gamescope-specific libs but depend on system libs for common ones
+          # Copy gamescopereaper (should be installed now)
+          if [ -f install-tmp/usr/bin/gamescopereaper ]; then
+            cp install-tmp/usr/bin/gamescopereaper package/usr/bin/
+            chmod +x package/usr/bin/gamescopereaper
+          else
+            echo "WARNING: gamescopereaper not found in install"
+            ls -la install-tmp/usr/bin/
+          fi
+          
+          # Also copy gamescopectl if present
+          if [ -f install-tmp/usr/bin/gamescopectl ]; then
+            cp install-tmp/usr/bin/gamescopectl package/usr/bin/
+            chmod +x package/usr/bin/gamescopectl
+          fi
+          
+          # Find and copy all non-system shared libraries for gamescope
           ldd build/src/gamescope | grep "=> /" | awk '{print $3}' | while read lib; do
-            # Skip system libraries that are safe to depend on
             case "$lib" in
               /lib/x86_64-linux-gnu/libc.so* | \
               /lib/x86_64-linux-gnu/libm.so* | \
@@ -203,10 +177,8 @@ jobs:
               /lib/x86_64-linux-gnu/libpthread.so* | \
               /lib/x86_64-linux-gnu/librt.so* | \
               /lib64/ld-linux-x86-64.so* )
-                # Skip basic system libraries
                 ;;
               *)
-                # Copy library to our vendor directory
                 if [ -f "$lib" ]; then
                   cp -L "$lib" package/usr/lib/gamescope/
                 fi
@@ -214,8 +186,12 @@ jobs:
             esac
           done
           
-          # Patch the binary to look in the vendored lib directory first
-          patchelf --set-rpath '$ORIGIN/../lib/gamescope' package/usr/bin/gamescope || true
+          # Patch all binaries to look in the vendored lib directory first
+          for binary in package/usr/bin/*; do
+            if [ -f "$binary" ] && [ -x "$binary" ]; then
+              patchelf --set-rpath '$ORIGIN/../lib/gamescope' "$binary" || true
+            fi
+          done
           
           cat > package/DEBIAN/control <<EOF
           Package: gamescope-vendored
